# YASRL

./: .env.backup  .env.example  .gitignore  API_TESTING_GUIDE.md  gunicorn.conf.py  projects.json  pyproject.toml  requirements.txt  server.py  yasrl.yaml
.deepeval/: .deepeval_telemetry.txt
config_files/: fasolaki.com  fetch_files.sh
config_files/backups/20251125_091350/: fasolaki.com  yasrl-api.service  yasrl-ui.service
demo_docs/: sample.txt
docs/: README.md  api_examples.md  environment_configuration.md  example_configuration.md  project_specifications.md  todo.md
results/: generated_dataset_3_questions.json
src/API/: api.py  api_integration.py  auth.py  crud.py  pipeline_cache.py  rate_limiter.py
src/UI/: app.py  evaluate_tab.py  evaluation.py  evaluation_tab.py  project_manager.py  projects.json
src/UI/HTMX/: app.py
src/UI/HTMX/static/: app.js  styles.css
src/UI/HTMX/static/css/: indexing.css  style.css
src/UI/HTMX/static/js/: app.js  indexing.js
src/UI/HTMX/templates/: index.html
src/UI/HTMX/templates/components/: project_details.html  projects_list.html  (+1 more)
src/UI/HTMX2/: main.py
src/UI/HTMX2/templates/: admin.html  base.html  chat.html
src/UI/uploads/3/: happy_payments.txt
src/evals/: analysing_failures.py  basic_evaluation.py  comparative_evaluation.py  continuous_evaluation.py  deepeval_evaluation.py  deepeval_gemini.py  generate_qa_pairs.py  generate_questions.py  readme.md
src/evals/results/: basic_evaluation_results.json  comparative_evaluation_results_happy_payments.json  continuous_evaluation_results_happy_payments.json
src/yasrl/: __init__.py  api.py  api_integration.py  app.py  auth.py  database.py  database_logger.py  exceptions.py  feedback.py  indexer.py  loaders.py  middleware.py  models.py  my_tests.py  pipeline.py  pipeline_cache.py  query_engine.py  query_processor.py  rate_limiter.py  reranker.py  text_processor.py  vector_store.py
src/yasrl/config/: __init__.py  app_config.py  manager.py  models.py
src/yasrl/evaluation/: base.py  cli.py  ragas_evaluator.py
src/yasrl/providers/: __init__.py  embeddings.py  llm.py
tests/: test_api_integration.py  test_app.py  test_app_playwright.py  test_config.py  test_env_loader.py  test_evaluation_base.py  test_evaluation_cli.py  test_evaluation_ragas.py  test_exceptions.py  test_gemini.py  test_loaders.py  test_models.py  test_pipeline.py  test_pipeline_ask.py  test_pipeline_complete.py  test_pipeline_index.py  test_pipeline_init.py  test_providers_embeddings.py  test_providers_llm.py  test_query_engine.py  test_query_processor.py  test_text_processor.py  test_vector_store.py
(+6 files in other folders)
