[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yasrl"
version = "0.1.0"
description = "Yet Another RAG Library"
authors = [{ name = "chrys", email = "zampas@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "llama-index-core",
    "asyncio",
    "dataclasses; python_version<'3.10'",
    "logging",
    "python-dotenv",
    "pyyaml"
]

[project.optional-dependencies]
openai = [
    "openai",
    "llama-index-llms-openai",
    "llama-index-embeddings-openai"
]
gemini = [
    "google-generativeai",
    "llama-index-llms-gemini",
    "llama-index-embeddings-gemini"
]
ollama = [
    "llama-index-llms-ollama"
]
postgres = [
    "pgvector",
    "psycopg2",
    "llama-index-vector-stores-pgvector"
]
dev = [
    "black",
    "flake8",
    "mypy"
]
test = [
    "pytest",
    "pytest-mock"
]
docs = [
    "sphinx",
    "sphinx-rtd-theme"
]