[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yasrl"
version = "0.1.0"
description = "Yet Another RAG Library"
authors = [{ name = "chrys", email = "zampas@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    # Core LlamaIndex RAG
    "llama-index-core",
    "llama-index-readers-file",
    "llama-index-readers-web",
    "llama-index-vector-stores-postgres",
    
    # Gemini LLM & Embeddings
    "llama-index-llms-gemini",
    "llama-index-embeddings-gemini",
    
    # Config & utilities
    "python-dotenv",
    "pyyaml",
    "ruff",
    
    # Web frameworks
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "flask",
    "gunicorn",
    
    # Data processing
    "pydantic>=2.0.0",
    "numpy",
    "markitdown[all]",
    
    # Evaluation
    "deepeval", 
    "google-generativeai",
    
    # Database
    "psycopg2-binary",
    "pgvector",
]

[project.optional-dependencies]
# Alternative LLM providers (install only if needed)
openai = [
    "openai",
    "llama-index-llms-openai",
    "llama-index-embeddings-openai"
]
ollama = [
    "llama-index-llms-ollama"
]

# Heavy evaluation libraries (install only if needed for evaluation)
evaluation = [
    "ragas",
    "sentence-transformers",
    "sacrebleu",
    "langchain-google-genai",
]

# Development & testing
dev = [
    "black",
    "flake8",
    "mypy",
    "pytest",
    "pytest-mock",
    "pytest-asyncio",
    "pytest-playwright",
]

docs = [
    "sphinx",
    "sphinx-rtd-theme"
]
